# shabti

./: README.md  pyproject.toml
src/: cached_remote_file.py  cmd_group.py  config.py  main.py
src/commands/: host.py  ssh.py
src/helpers/: inventory_conf.py
src/tools/: cached_remote_file.py  inventory_conf.py
