[project]
name = "shabti"
version = "0.1.0"
description = "A helper for infra related tasks."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "certifi>=2025.8.3",
    "click>=8.2.1",
]

[tool]
uv.package = true

[project.scripts]
sb = "main:cli"
